Fixed collaplse dashboard and button spacing

--- a/components/dashboard/Navbar.module.css
+++ b/components/dashboard/Navbar.module.css
@@ -55,7 +55,7 @@
 	font-size: 0.875rem;
 	line-height: 1.4rem;
 	position: absolute;
-	z-index: 50;
+	z-index: 30;
 	margin-left: -1px;
 	display: flex;
 	height: 100%;
